# sortPictureResolve-gui

./: .editorconfig  .gitmodules  README.md  fr.daemonwhite.sortpictureresolve.json  meson.build
data/: fr.daemonwhite.sortpictureresolve.appdata.xml.in  fr.daemonwhite.sortpictureresolve.desktop.in  fr.daemonwhite.sortpictureresolve.gschema.xml  meson.build  sortpictureresolve-gui.gresource.xml
data/css/: style.css
data/icons/: meson.build
data/ui/: meson.build  preferenceswindow.blp  sortpictureresolve-gui.gresource.xml  window.blp  window.ui
data/ui/gtk/: help-overlay.blp
flatpak/: fr.daemonwhite.sortpictureresolve.json  python3-pillow.json
po/: POTFILES  meson.build
src/: configurationmanager.py  main.py  meson.build  preferences_window.py  sortpictureresolve-gui.in  window.py
src/drawratiocontroller/: __init__.py  ratio_object.py  rectangle_draw.py
src/picturecardcontroller/: BoxKeys.py  PictureCard.py  __init__.py
src/subpage/: ratio_subpage.py
